# dbt-trill-shop

./: README.md  dbt_project.yml
dbt-pr-review-agent/: Cargo.toml  Makefile  README.md  TESTING.md
dbt-pr-review-agent/examples/: quick_start.md  sample_config.toml  test_local.sh  test_with_llm.py
dbt-pr-review-agent/src/: config.rs  lib.rs  main.rs  types.rs
dbt-pr-review-agent/src/agents/: communication.rs  impact_agent.rs  mod.rs  orchestrator.rs  performance_agent.rs  quality_agent.rs
dbt-pr-review-agent/src/artifacts/: catalog.rs  discovery.rs  manifest.rs  mod.rs  parser.rs
dbt-pr-review-agent/src/github/: client.rs
dbt-pr-review-agent/src/lineage/: analyzer.rs  graph.rs  mod.rs  traversal.rs
dbt-pr-review-agent/src/llm/: interfaces.rs  mod.rs  prompts.rs  providers.rs
dbt-pr-review-agent/src/reports/: formatters.rs  generator.rs  mod.rs
docs/: pr_review_agent_architecture.md
models/docs/: google_trends_docs.md
models/marts/: top_terms_comparison.sql  top_terms_comparison.yml  trending_terms_analysis.sql  trending_terms_analysis.yml  weekly_trends_summary.sql  weekly_trends_summary.yml
models/staging/: __sources.yml  stg_customers.yml  stg_international_top_rising_terms.sql  stg_international_top_rising_terms.yml  stg_international_top_terms.sql  stg_international_top_terms.yml  stg_top_rising_terms.sql  stg_top_rising_terms.yml  stg_top_terms.sql  stg_top_terms.yml
