[package]
name = "dbt-pr-review-agent"
version = "0.1.0"
edition = "2021"
authors = ["MLOps Team"]
description = "Universal dbt PR Review Agent with multi-agent architecture"
license = "MIT"
readme = "README.md"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Graph processing (NetworkX equivalent)
petgraph = "0.6"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.21"
opentelemetry = "0.20"
opentelemetry-otlp = "0.13"

# Configuration management
config = "0.13"

# File system operations
walkdir = "2.0"
glob = "0.3"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# GitHub API
octocrab = "0.32"

# SQL parsing (for quality validation)
sqlparser = "0.39"

# Regex for pattern matching
regex = "1.0"

# Performance metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Environment variables
dotenv = "0.15"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Hashing utilities
sha2 = "0.10"

# LLM integrations
base64 = "0.21"
eventsource-client = "0.11"  # For streaming responses
tiktoken-rs = "0.5"  # Token counting
backoff = { version = "0.4", features = ["tokio"] }  # Retry logic

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "dbt-pr-agent"
path = "src/main.rs"

[lib]
name = "dbt_pr_review_agent"
path = "src/lib.rs"